# orchgentic

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_v1.0.1.md  CLI_PATCH_INSPECTION.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DETERMINISTIC_OPS_V0_7_10.md  GITHUB_RELEASE_DESCRIPTION_V0_8_0_BETA_2.md  GMAIL_ACTIONS_V0_7_8.md  GMAIL_CONNECTOR_V0_7_7.md  INTEGRATION_V0_7_11_LOCAL_REASONING.md  INTEGRATION_V0_7_12_ROUTING_POLICY.md  INTEGRATION_V0_8_0_ALPHA_1_OBSERVABILITY.md  LICENSE  LOCAL_TIME_12H_FORMAT_FIX.md  LOCAL_TIME_ROUTING_FIX.md  OPENAI_PROVIDER_HOTFIX.md  README.md  README_V1_0_1_CLEANUP_SNIPPET.md  RELEASE_MANIFEST.md  RELEASE_NOTES_V0_7_10_1_ALPHA.md  RELEASE_NOTES_V0_7_10_ALPHA.md  RELEASE_NOTES_V0_7_11_ALPHA.md  RELEASE_NOTES_V0_7_12_ALPHA.md  RELEASE_NOTES_V0_7_12_ALPHA_HOTFIX.md  RELEASE_NOTES_V0_7_12_TEAM_HANDOFF_COMPRESSION_HOTFIX.md  RELEASE_NOTES_V0_7_12_TEAM_SYNTHESIS_POLISH_HOTFIX.md  RELEASE_NOTES_V0_7_12_TEAM_SYNTHESIS_QUALITY_HOTFIX.md  RELEASE_NOTES_V0_7_12_TEAM_SYNTHESIS_STRUCTURED_OUTPUT_HOTFIX.md  RELEASE_NOTES_V0_7_6_ALPHA.md  RELEASE_NOTES_V0_7_7_ALPHA.md  RELEASE_NOTES_V0_8_0_ALPHA_1.md  RELEASE_NOTES_V0_8_0_BETA_2.md  RELEASE_NOTES_V0_8_0_BETA_3.md  RELEASE_NOTES_v1.0.1.md  RELEASE_VALIDATION.md  RELEASE_VALIDATION_V0_7_10_ALPHA.md  RELEASE_VALIDATION_V0_7_6_ALPHA.md  RELEASE_VALIDATION_V0_7_7_ALPHA.md  (+10 more)
agents/: bob.yaml  manager.yaml  researcher.yaml  reviewer.yaml  sample_reasoning.yaml  writer.yaml
config/: router.yaml
docs/: AGENT_CONFIGURATION.md  ARCHITECTURE.md  CLI_COMMANDS.md  CORE_YAML_CONTRACTS.md  EXAMPLES.md  PROVIDERS.md  (+48 more)
(+176 files in other folders)
